# Axion

./: .gitignore  CMakeLists.txt  READ.md
include/axion/: Vec3.h  particle.h  precision.h  vec3.h
src/: vec3.cpp
